[gd_scene load_steps=4 format=3 uid="uid://cpbn54i383ag2"]

[ext_resource type="Texture2D" uid="uid://b14lr72fs3dvx" path="res://Assets/Sprites/Runes/TheOneRune.png" id="1_423ma"]
[ext_resource type="Script" path="res://Scripts/SpellComponent.gd" id="1_s3mfu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jt8eo"]
radius = 111.005

[node name="SpellComponent" type="Node2D"]
script = ExtResource("1_s3mfu")

[node name="RuneBackground" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)
texture = ExtResource("1_423ma")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jt8eo")

[node name="ComponentSprite" type="Sprite2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
